--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section id="about" class="about section">
         <div class="container">
             <h2 class="title text-center">What is TouchMyLike?</h2>
-            <p class="intro text-center">Explain your project in detail. Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>
+           <!--<p class="intro text-center">Explain your project in detail. Ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate.</p>--> 
             <div class="row">
                 <div class="item col-lg-4 col-md-6 col-12">
                     <div class="icon-holder">
@@ -161,7 +161,7 @@
         <div class="container text-center">
             <h2 class="title">คอร์สเรียน</h2>
             <ul class="feature-list list-unstyled">
-                <li><i class="fab fa-node"></i> Node.js</li>
+                <li><i class="fab fa-react"></i> React.js</li>
             </ul>
         </div><!--//container-->
     </section><!--//features-->
@@ -172,8 +172,8 @@
             <div class="docs-inner">
             <h2 class="title text-center">Get Started</h2>            
             <div class="block">
-                <h3 class="sub-title text-center">Node.js</h3>
-                <p><a href="https://expressjs.com/" target="_blank">Express</a> is used as the syntax highlighter here.</p>
+                <h3 class="sub-title text-center">React.js</h3>
+                <p><a href="https://reactjs.org/" target="_blank">React</a> is used as the syntax highlighter here.</p>
                 <p>Below are the details of the custom PrismJS build used in this template. You can <a href="http://prismjs.com/download.html" target="_blank">build your own version</a> via their website should you need to.</p>
                 <ul class="list-unstyled">
                     <li><strong>Compression level:</strong> Minified</li>
@@ -183,7 +183,9 @@
                 <div class="code-block">
                     <!--//Use Prismjs - http://prismjs.com/index.html#basic-usage -->
                     <pre><code class="language-markup">
-    $ npm install express --save
+    npx create-react-app my-app
+    cd  my-app
+    npm start
                      </code></pre>
                 </div><!--//code-block-->
             </div><!--//block-->
@@ -216,7 +218,7 @@
                 <h3 class="sub-title text-center">Full Documentation</h3>
                 <p>If your documentation is very long you can host the full docs page (including FAQ etc) on GitHub and provide a Call to Action button below to direct users there.</p>
                 <p class="text-center">
-                    <a class="btn btn-cta-primary" href="https://github.com/xriley/devAid-Theme" target="_blank">อ่านเพิ่มเติม...</a>
+                    <a class="btn btn-cta-primary" href="./doc.html">อ่านเพิ่มเติม...</a>
                 </p>
             </div><!--//block-->
             
